--- a/younghyun/src/css/firstPage.css
+++ b/younghyun/src/css/firstPage.css
@@ -1,12 +1,12 @@
 .first-page {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 .first-page::before {
     content: "";
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     position: absolute;
     top: 0px;
