--- a/younghyun/src/css/index.css
+++ b/younghyun/src/css/index.css
@@ -1,29 +1,34 @@
 body {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 
-    overflow-y: scroll;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
 
 .curtain {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 
-    position: fixed;
+  position: fixed;
 
-    animation: OpenTheCurtain 1s linear;
-    z-index: 3;
+  animation: OpenTheCurtain 1s linear;
+  z-index: 3;
 }
 
 @keyframes OpenTheCurtain {
-    0% {
-        background-color: rgba(0, 0, 0, 1);
-    }
-    75% {
-        background-color: rgba(0, 0, 0, 1);
-    }
-    100% {
-        background-color: rgba(0, 0, 0, 0);
-    }
+  0% {
+    background-color: rgba(0, 0, 0, 1);
+  }
+  75% {
+    background-color: rgba(0, 0, 0, 1);
+  }
+  100% {
+    background-color: rgba(0, 0, 0, 0);
+  }
 }
