--- a/younghyun/src/css/secondPage.css
+++ b/younghyun/src/css/secondPage.css
@@ -1,9 +1,9 @@
-.first-page {
+.second-page {
   width: 100%;
   height: 100%;
   position: relative;
 }
-.first-page::before {
+.second-page::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -17,11 +17,4 @@
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
-}
-
-.first-page video {
-  width: 100%;
-  height: auto;
-
-  object-fit: cover;
 }
