--- a/younghyun/src/css/pages.css
+++ b/younghyun/src/css/pages.css
@@ -1,6 +1,11 @@
 .pageContainer {
   width: 100vw;
-  height: 100vh;
+  height: 400vh;
 
-  transition: transform 1.1s ease-in-out;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+  transition: transform 0.7s ease-in-out;
 }
