--- a/younghyun/src/css/firstPage.css
+++ b/younghyun/src/css/firstPage.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .first-page::before {
@@ -45,7 +46,7 @@
   flex-direction: column;
 }
 
-.titleContainer .description {
+.titleContainer .firstDescription {
   transform: scale(0.8, 0.8);
   animation: showDescription 1.8s linear;
 }
@@ -65,7 +66,7 @@
   }
 }
 
-.first-page #title {
+.first-page .firstTitle {
   position: absolute;
   top: -120%;
   animation: showTitle 2.7s linear;
@@ -87,7 +88,7 @@
   }
 }
 
-.content #button {
+.content .firstButton {
   transform: scale(0.6, 0.6);
   animation: showButton 3.5s linear;
 }
