--- a/younghyun/src/css/secondPage.css
+++ b/younghyun/src/css/secondPage.css
@@ -19,3 +19,102 @@
   background-size: cover;
   z-index: -1;
 }
+
+.secondTitleContainer {
+  width: 100vw;
+  height: 15vh;
+  position: relative;
+  padding-top: 10%;
+
+  animation: popUpEffect 1s ease-in-out;
+}
+.secondMap {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 20%;
+
+  animation: popUpEffect 1s ease-in-out;
+}
+
+@keyframes popUpEffect {
+  0% {
+    opacity: 0;
+    transform: scale(0, 0);
+  }
+  30% {
+    opacity: 1;
+    transform: scale(0.1, 0.1);
+  }
+  50% {
+    transform: scale(0.1, 0.1);
+  }
+  85% {
+    transform: scale(1.2, 1.2);
+  }
+  90% {
+    transform: scale(0.8, 0.8);
+  }
+  95% {
+    transform: scale(1.1, 1.1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+.secondDescription {
+  width: 100vw;
+  height: 5vw;
+  position: absolute;
+  top: 30%;
+  background-image: url("../../assets/secondPage/description.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  transform: scale(0.3, 0.3);
+}
+
+.secondTitle {
+  width: 100vw;
+  height: 15vw;
+  position: absolute;
+  top: 60%;
+  background-image: url("../../assets/secondPage/title.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  transform: scale(0.5, 0.5) translateY(-80%);
+}
+
+.secondEffect {
+  width: 100vw;
+  height: 15vw;
+  position: absolute;
+  top: 78%;
+  background-image: url("../../assets/secondPage/effect.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  transform: scale(0.5, 0.5) translateX(0) translateY(-80%);
+
+  animation: moveEffect 3s ease-in-out;
+}
+
+@keyframes moveEffect {
+  0% {
+    opacity: 0;
+    transform: scale(0.5, 0.5) translateX(15%) translateY(-80%);
+  }
+  40% {
+    opacity: 0;
+    transform: scale(0.5, 0.5) translateX(15%) translateY(-80%);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(0.5, 0.5) translateX(0) translateY(-80%);
+  }
+}
